--- a/client/src/Components/EditProperty.css
+++ b/client/src/Components/EditProperty.css
@@ -1,3 +1,3 @@
-.EditProperty{
-    margin-top: 14%;
+.test{
+    background-color: red;
 }
