--- a/client/src/Components/Navbar.css
+++ b/client/src/Components/Navbar.css
@@ -1,6 +1,3 @@
-*{
-    margin: 0;
-}
 .Navbar{
     /* border: black 1px solid; */
     display: flex;
@@ -17,6 +14,10 @@
     margin-left: 20%;
 }
 
+.Navbar a img{
+    height: 10%;
+    width: 10%;
+}
 .Navbar ul{
     align-items: center;
     flex-grow: 1;
